// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing snapshot for Trackey's group destination action: all fields 1`] = `
Object {
  "groupId": "IF@l7Hj&FhM",
  "messageId": "IF@l7Hj&FhM",
  "timestamp": "IF@l7Hj&FhM",
  "traits": Object {
    "testType": "IF@l7Hj&FhM",
  },
  "userId": "IF@l7Hj&FhM",
}
`;

exports[`Testing snapshot for Trackey's group destination action: required fields 1`] = `
Object {
  "groupId": "IF@l7Hj&FhM",
  "timestamp": "IF@l7Hj&FhM",
  "userId": "IF@l7Hj&FhM",
}
`;
